--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@ body
   background-color: AliceBlue;
   font-family:"Courier New", Courier, monospace;
 }
+
+div
+{
+  width:500px;
+  border: 5px solid blue;
+}
