--- a/style.css
+++ b/style.css
@@ -11,4 +11,11 @@ div
   padding: 30px;
   margin: 25px;
   border: 5px solid blue;
+  border-radius: 25px;
+}
+
+p
+{
+  background-color:LightGreen;
+  width: 50%;
 }
